@startuml
'https://plantuml.com/class-diagram

class Task {
- id: int
- name: String
- description: String
- status: Status
}

class Epic {
- id: int
- name: String
- description: String
- subtackId: Subtask
- status: Status
}

class Subtask {
- id: int
- name: String
- description: String
- epicId: Epic
- status: Status
}

Epic  --> "*" Subtask : содержит \nнесколько Subtask
Task --> Epic : Базовый класс для \nв Epic и Subtask
Task --> Subtask : Базовый класс для \nв Epic и Subtask
enum Status {
NEW,
IN_PROGRESS,
DONE
}

Task --> Status : имеет статус
Epic --> Status : имеет статус
Subtask --> Status : имеет статус

@enduml